[project]
name = "fastapi-s3-public-object"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sy Tran Dung", email = "me@sytranvn.dev"},
]
dependencies = ["fastapi[standard]>=0.115.5", "minio>=7.2.10", "sqlmodel>=0.0.22"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
